# new_ai_ui

./: README.md  pyproject.toml
examples/: chat_example.ipynb
llm_notebook_ui/: __init__.py  chat.py  magics.py  provider.py
