[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "llm_notebook_ui"
version = "0.1.0"
description = "Jupyter-based UI for chatting with language models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipywidgets>=8.0",
    "openai>=1.0",
    "google-generativeai>=0.8",
    "requests",
    "IPython",
    "nbformat",
]
